@@ -455,32 +455,6 @@ public static void main(String[] args) {
 }
 ```
 
-## 命令查看GC
-
-- 方式1
-  - S0和S1只会有一个同一时刻存储数据
-  - 代码中Runtime.getRuntime().totalMemory()只会计算一个S区的内存
-
-```shell
-C:\Users\alonePc>jps
-12192
-14296 Jps
-15192 HeapSpace
-9720 Launcher
-# 老年代， OC:总量 OU：使用的数量（kb）/1024=M
-C:\Users\alonePc>jstat -gc 15192
- S0C    S1C    S0U    S1U      EC       EU        OC         OU       MC     MU    CCSC   CCSU   YGC     YGCT    FGC    FGCT     GCT
-10752.0 10752.0  0.0    0.0   65536.0   5243.8   175104.0     0.0     4480.0 781.2  384.0   75.9       0    0.000   0      0.000    0.000
-```
-
-- 方式2
-
-  - 设置启动参数
-  - 他是程序执行之后打印的
-
-```shell
--XX:+PrintGCDetails
-```
 
 
 ## 内存分配策略
@@ -572,35 +546,7 @@ C:\Users\alonePc>jstat -gc 15192
 
 首先标记出所需回收的对象，在标记完成后统一回收掉所有被标记的对象，**它的标记过程其实就是前面的可达性分析算法中判定垃圾对象的标记过程**
 
-## 常用参数
 
-https://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html
-
-```
--Xms 设置堆的初始值(默认物理内存的1/64)
--Xmx 设置堆的最大值（默认物理内存的1/4）
--Xmn 设置新生代的大小
--XX:NewRatio 新生代与老年代的比例
--XX:+PrintGCDetails 打印 垃圾回收 的细节
-```
-
-- 查看默认值
-
-```shell
-
-## 查看某个参数的设置值
-$ jinfo -flag NewRatio 8884
--XX:NewRatio=2
-```
-
-- 打印GC信息
-
-```shell
-## 打印详细信息
--XX:+PrintGCDetails
-## 打印简要信息
--XX:+PrintGC
-```
 
 - 虚拟机空间担保策略
 
@@ -1497,77 +1443,6 @@ G1的老年代回收器不需要整个老年代被回收，
 
 ![](../..//image/java/jvm/20210523234558.png)
 
-# GC日志分析
-
-## 常用参数
-
-```shell
-## 输出GC日志
--XX:+PrintGC
-## 输出GC详细信息
--XX:+PrintGCDetails
-## 输出GC时间蹉
--XX:+PrintGCTimeStamps
-## 输出GC时间（以日期为基准）
--XX:+PrintGCDateStamps
-## -在GC前后打印堆的信息
--XX：+PrintHeapAtGC
-## 日志文件输出
--Xloggc:../logs/gc.log
-```
-
-- -XX:+PrintGC
-  - GC/Full GC: GC的类型
-  - Allocation Failure：GC原因
-  - 3708K->3844K：GC前后大小
-  - (5632K)：堆大小
-
-```tex
-[GC (Allocation Failure)  3708K->3844K(5632K), 0.0007932 secs]
-[Full GC (Ergonomics)  3844K->3305K(5632K), 0.0071881 secs]
-```
-
-- -XX:+PrintGCDetails
-  - (Allocation Failure) :GC的原因
-  - PSYoungGen:对应新生代垃圾回收（Parallel）
-  -  [PSYoungGen: 1512K->488K(1536K)] ：新生代内容，GC前后大小（新生代大小）
-  - Times: user=0.06 sys=0.00, real=0.01 secs: 执行时间，系统时间，垃圾实际时间
-
-```tex
-[GC (Allocation Failure) [PSYoungGen: 1512K->488K(1536K)] 3764K->3900K(5632K), 0.0011602 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
-[Full GC (Ergonomics) [PSYoungGen: 488K->0K(1536K)] [ParOldGen: 3412K->3407K(4096K)] 3900K->3407K(5632K), [Metaspace: 3330K->3330K(1056768K)], 0.0087257 secs] [Times: user=0.06 sys=0.00, real=0.01 secs] 
-
-```
-
-- 由于多核的原因，一般的Gc事件中，real time是小于sys + user time的，因为一般是多个线程并发的去做Gc，所以real time是要小于sys+user time的。如果real>sys+user的话，则你的应用可能存在下列问题:IO负载非常重或者是CPU不够用。
-
-## GC工具分析日志
-
-### gceasy
-
-1. -Xloggc:gc.log进行GC日志输出
-2. 使用工具上传文件（gcviewer/https://gceasy.io/）
-
-### gcviewer
-
-
-
-# GC的分类
-
-- 新生代收集（Minor GC / Young GC）:只是新生代（Eden\S0,s1）的垃圾收集
-- 老年代收集（Major GC / 0ld GC）:只是老年代的垃圾收集。
-  - 目前，只有CMS GC会有单独收集老年代的行为。
-- 混合收集（Mixed GC):收集整个新生代以及部分老年代的垃圾收集。
-  - 目前，只有G1 GC会有这种行为
-- 整堆收集（Full GC):收集整个java堆和方法区的垃圾收集。
-
-```tex
-什么时候触发Full GC
-
-老年代空间不足
-方法区空间不足
-大对象直接进入老年代，而老年代的可用空间不足
-```
 
 
 
